# module_brlcad

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  brlcadViewer.cpp
cmake/: FindBRLCAD.cmake  Findbrlcad.cmake
ospray/: CMakeLists.txt  moduleInit.cpp
ospray/geometry/: brlcad.cpp  brlcad.h  brlcad.ispc
